--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400&family=Yuji+Hentaigana+Akari&display=swap");
+
 body {
   background: #112345;
   text-align: center;
   color: bisque;
+}
+
+h1 {
+  font-family: "Yuji Hentaigana Akari";
+  font-size: 160px;
 }
