--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,331 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400&family=Yuji+Hentaigana+Akari&display=swap");
+/* Main Stuff */
 
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
-  background: #112345;
-  text-align: center;
-  color: bisque;
+  /* color: rgb(240, 240, 240); */
+  color: #f3d0fc;
+  font-family: "Lexend", sans-serif;
+  font-weight: 100;
+}
+html {
+  scroll-behavior: smooth;
+}
+section {
+  height: 100vh;
 }
 
-h1 {
-  transition: 0.5s;
-  font-family: "Yuji Hentaigana Akari";
-  font-size: 160px;
+/* Intro Section */
+a {
+  text-decoration: none;
+  color: rgb(240, 240, 240);
 }
-h1:hover {
-  transition: 1s;
-  opacity: 0.1;
-  color: aqua;
+#intro {
+  background-color: rgb(13, 13, 13);
+  background-image: url("/assets/bg.jpg");
+  background-position: bottom 0px left 500px;
+  background-attachment: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 6rem;
+  color: #f3d0fc;
+  /* color: rgb(240, 240, 240); */
+}
+h1 {
+  font-weight: 100;
+  font-size: 5rem;
+  margin-bottom: 1rem;
+  background: linear-gradient(121deg, #ad00ff 0%, #0c0056 100%),
+    linear-gradient(121deg, #fa00ff 0%, rgba(0, 255, 71, 0) 100%),
+    linear-gradient(127deg, #00f0ff 0%, #a80000 100%),
+    radial-gradient(107% 142% at 15% 104%, #f3d0fc 0%, #1700a4 100%),
+    radial-gradient(100% 100% at 50% 0%, #7300a9 0%, #00ffe0 100%),
+    radial-gradient(100% 100% at 50% 0%, #7300a9 0%, #00ffe0 100%),
+    linear-gradient(127deg, #b7d500 0%, #2200aa 100%);
+  background-blend-mode: overlay, color, overlay, difference, color-dodge,
+    difference, normal;
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@keyframes moveRight {
+  from {
+    background-position: 0% center;
+  }
+  to {
+    background-position: -200% center;
+  }
+}
+
+.list-of-things h2 {
+  cursor: crosshair;
+}
+.glowing-list-1 {
+  animation: moveRight 4s linear infinite;
+  background: linear-gradient(
+    to right,
+    rgb(190, 92, 232),
+    rgb(195, 179, 223),
+    rgb(244, 143, 177),
+    rgb(187, 85, 230)
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.glowing-list-2 {
+  animation: moveRight 4s linear infinite;
+  background: linear-gradient(
+    to left,
+    rgb(123, 31, 162),
+    rgb(103, 58, 183),
+    rgb(244, 143, 177),
+    rgb(123, 31, 162)
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.glowing-list-3 {
+  animation: moveRight 4s linear infinite;
+  background: linear-gradient(
+    to left,
+    rgb(105, 87, 236),
+    rgb(103, 58, 183),
+    rgb(232, 96, 141),
+    rgb(87, 107, 225)
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.glowing-list-4 {
+  animation: moveRight 5s linear infinite;
+  background: linear-gradient(
+    to right,
+    rgb(20, 173, 50),
+    rgb(103, 58, 183),
+    rgb(131, 21, 89),
+    rgb(31, 202, 53)
+  );
+  background-size: 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h2 {
+  font-weight: 100;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #f3d0fc;
+}
+.list-of-things {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+
+  /* margin-top: 1rem; */
+}
+.list-of-things h2 {
+  margin-top: 1rem;
+}
+
+/* Bass section */
+
+#bass {
+  background-color: rgba(4, 7, 12, 255);
+  background-image: url("/assets/bg2.jpg");
+  background-position: right 800px bottom 0px;
+  background-attachment: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: rgb(240, 240, 240);
+}
+
+#bass h2 {
+  font-family: inherit;
+  padding-top: 40px;
+  margin-bottom: 30px;
+}
+.container-bass {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  gap: 4vh;
+  margin-right: 10vh;
+  list-style: none;
+}
+
+.bass-class {
+  width: 63%;
+  float: right;
+  text-align: center;
+}
+
+.arrow {
+  height: 30px;
+  margin-bottom: 50px;
+}
+
+#sound {
+  background-color: rgba(4, 7, 12, 255);
+  /* background-image: url("/assets/bg2.jpg"); */
+  background-position: right 800px bottom 0px;
+  background-attachment: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: rgb(240, 240, 240);
+}
+/* Sound Design Section */
+p {
+  padding: 4px;
+  font-size: 1.2rem;
+}
+#sound h2 {
+  text-align: center;
+  padding-top: 30px;
+  margin-bottom: 0;
+}
+#sound h3 {
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+  font-weight: 100;
+  text-align: center;
+  color: #f3d0fc;
+}
+
+.container-kssl {
+  margin: 30px;
+  display: flex;
+  /* flex-wrap: wrap; */
+  border: 1px solid rgba(225, 225, 225, 0.4);
+  padding: 15px;
+  border-radius: 10px;
+}
+.kssl-text {
+  padding-right: 15px;
+}
+
+.container-mid {
+  margin: 30px;
+  display: flex;
+}
+.container-mid-left {
+  display: flex;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  /* border: 1px solid rgba(225, 225, 225, 0.4); */
+  padding: 15px;
+  border-radius: 10px;
+}
+.sound-replacement,
+.audio3d {
+  border: 1px solid rgba(225, 225, 225, 0.4);
+  padding: 15px;
+  border-radius: 10px;
+  margin-right: 30px;
+  margin-bottom: 5px;
+}
+.small-window {
+  padding: 15px;
+}
+#sound .arrow {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 50%; */
+}
+/* Contact Section */
+
+#contact {
+  background-color: rgba(4, 7, 12, 255);
+  background-image: url("/assets/bg_contact.JPG");
+  background-position: right 0px bottom 0px;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(240, 240, 240);
+}
+
+#contact h2 {
+  font-weight: 100;
+  font-size: 3rem;
+  padding-top: 5rem;
+  padding-left: 12rem;
+  margin-bottom: 4rem;
+  color: black;
+}
+
+form {
+  max-width: 420px;
+  margin-left: 7rem;
+  /* margin-left: 7rem; */
+}
+.feedback-input {
+  border-radius: 5px;
+  font-family: inherit;
+  font-weight: 200;
+  color: black;
+  line-height: 22px;
+  background-color: transparent;
+  border: 1px solid black;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+.feedback-input:focus {
+  border: 1px solid gray;
+}
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
+}
+
+.submit {
+  font-family: inherit;
+  font-weight: 200;
+  background-color: transparent;
+  width: 100%;
+  border: 1px solid #0c0056;
+  /* background: #cc6666; */
+  border-radius: 5px;
+  cursor: pointer;
+  color: #10093e;
+  font-size: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 0.3s;
+  /* margin-top: -4px; */
+  /* font-weight: 700; */
+  margin-bottom: 4rem;
+}
+.submit:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+.footer {
+  margin-left: 10rem;
+}
+.social-links {
+  padding-right: 37px;
+  height: 50px;
+  transition: all 0.3s;
+}
+.social-links:hover {
+  opacity: 0.6;
 }
