--- a/styles.css
+++ b/styles.css
@@ -263,9 +263,17 @@ p {
   padding-top: 5rem;
   padding-left: 12rem;
   margin-bottom: 4rem;
+  /* padding-bottom: 4rem; */
   color: black;
 }
-
+#contact h3 {
+  font-weight: 100;
+  font-size: 1.5rem;
+  padding-left: 12rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: black;
+}
 form {
   max-width: 420px;
   margin-left: 7rem;
@@ -313,8 +321,9 @@ textarea {
   transition: all 0.3s;
   /* margin-top: -4px; */
   /* font-weight: 700; */
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
 }
+
 .submit:hover {
   background: rgba(255, 255, 255, 0.5);
 }
