--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,25 @@
 /* Main Stuff */
 
-@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap');
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-body {
-  /* color: rgb(240, 240, 240); */
-  color: #f3d0fc;
-  font-family: "Lexend", sans-serif;
-  font-weight: 100;
-}
+
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
+
+body {
+  min-height: 100%;
+  color: #f3d0fc;
+  font-family: 'Lexend', sans-serif;
+  font-weight: 100;
+}
+
 section {
   height: 100vh;
 }
@@ -24,17 +29,18 @@ a {
   text-decoration: none;
   color: rgb(240, 240, 240);
 }
+
 #intro {
+  padding: 3rem;
   background-color: rgb(13, 13, 13);
-  background-image: url("/assets/bg.jpg");
-  background-position: bottom 0px left 500px;
+  background-image: url('/assets/bg.jpg');
+  background-position: bottom;
   background-attachment: fixed;
   background-size: contain;
   background-repeat: no-repeat;
-  padding: 6rem;
   color: #f3d0fc;
-  /* color: rgb(240, 240, 240); */
 }
+
 h1 {
   font-weight: 100;
   font-size: 5rem;
@@ -66,6 +72,7 @@ h1 {
 .list-of-things h2 {
   cursor: crosshair;
 }
+
 .glowing-list-1 {
   animation: moveRight 4s linear infinite;
   background: linear-gradient(
@@ -80,6 +87,7 @@ h1 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 .glowing-list-2 {
   animation: moveRight 4s linear infinite;
   background: linear-gradient(
@@ -94,6 +102,7 @@ h1 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 .glowing-list-3 {
   animation: moveRight 4s linear infinite;
   background: linear-gradient(
@@ -144,7 +153,7 @@ h2 {
 
 #bass {
   background-color: rgba(4, 7, 12, 255);
-  background-image: url("/assets/bg2.jpg");
+  background-image: url('/assets/bg2.jpg');
   background-position: right 800px bottom 0px;
   background-attachment: fixed;
   background-size: contain;
@@ -175,6 +184,20 @@ h2 {
 .arrow {
   height: 30px;
   margin-bottom: 50px;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav li {
+  font-size: 3rem;
+  border-block-end: 1px solid;
+  padding-block: 2rem;
+}
+
+nav li:last-child {
+  border-block-end: none;
 }
 
 #sound {
@@ -249,7 +272,7 @@ p {
 
 #contact {
   background-color: rgba(4, 7, 12, 255);
-  background-image: url("/assets/bg_contact.JPG");
+  background-image: url('/assets/bg_contact.JPG');
   background-position: right 0px bottom 0px;
   background-attachment: fixed;
   background-size: cover;
