--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap");
 
+@keyframes moveRight {
+  from {
+    background-position: 0% center;
+  }
+  to {
+    background-position: -200% center;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,30 +27,6 @@ html {
   background: #000000;
 }
 
-@media screen and (min-width: 500px) {
-  :root {
-    font-size: calc(1.25 * var(--base-font-size));
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  :root {
-    font-size: calc(1.5 * var(--base-font-size));
-  }
-}
-
-@media screen and (min-width: 1500px) {
-  :root {
-    font-size: calc(1.75 * var(--base-font-size));
-  }
-}
-
-@media screen and (min-width: 2000px) {
-  :root {
-    font-size: calc(2 * var(--base-font-size));
-  }
-}
-
 body {
   min-height: 100%;
   color: #f3d0fc;
@@ -51,7 +36,7 @@ body {
 }
 
 section {
-  height: 100vh;
+  height: calc(100vh + 1px);
 }
 
 /* Intro Section */
@@ -70,11 +55,12 @@ img {
   padding: 1rem;
   background-color: rgb(13, 13, 13);
   background-image: url("/assets/bg.jpg");
-  background-position: bottom;
+  background-position: 30% bottom;
   background-attachment: fixed;
-  background-size: 150%;
+  background-size: min(175%, 1200px);
   background-repeat: no-repeat;
   color: #f3d0fc;
+  transition: background-position 1s;
 }
 
 h1 {
@@ -103,13 +89,8 @@ h1 {
   color: #f3d0fc;
 }
 
-@keyframes moveRight {
-  from {
-    background-position: 0% center;
-  }
-  to {
-    background-position: -200% center;
-  }
+nav {
+  max-width: min(100%, 25ch);
 }
 
 nav ul {
@@ -215,11 +196,17 @@ nav li:last-child {
 #bass {
   background-color: rgba(4, 7, 12, 255);
   background-image: url("/assets/bg2.jpg");
-  background-position: right 800px bottom 0px;
+  background-position: center;
   background-attachment: fixed;
   background-size: contain;
   background-repeat: no-repeat;
   color: rgb(240, 240, 240);
+  opacity: 0;
+  transition: opacity 2s;
+}
+
+#bass.in-view {
+  opacity: 1;
 }
 
 #bass h2 {
@@ -407,4 +394,32 @@ textarea {
 }
 .social-links:hover {
   opacity: 0.6;
+}
+
+@media screen and (min-width: 500px) {
+  :root {
+    font-size: calc(1.25 * var(--base-font-size));
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  :root {
+    font-size: calc(1.5 * var(--base-font-size));
+  }
+
+  #intro {
+    background-position: 100% bottom;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  :root {
+    font-size: calc(1.75 * var(--base-font-size));
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  :root {
+    font-size: calc(2 * var(--base-font-size));
+  }
 }
