--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Main Stuff */
 
-@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400&family=Yuji+Boku&family=Yuji+Hentaigana+Akari&display=swap');
 
 @keyframes moveRight {
   from {
@@ -24,22 +24,17 @@ html {
   scroll-behavior: smooth;
   height: 100%;
   font-size: var(--base-font-size);
-  background: #000000;
+  background-color: rgb(13, 13, 13);
 }
 
 body {
   min-height: 100%;
   color: #f3d0fc;
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-weight: 100;
   font-size: 1.6rem;
 }
 
-section {
-  height: calc(100vh + 1px);
-}
-
-/* Intro Section */
 a {
   text-decoration: none;
   color: rgb(240, 240, 240);
@@ -51,10 +46,60 @@ img {
   height: auto;
 }
 
-#intro {
+h1,
+h2,
+h3 {
+  line-height: normal;
+  font-weight: 100;
+}
+
+section {
+  height: 100vh;
+  position: relative;
+}
+
+section:not(#intro) h2 {
+  border-width: 1px;
+  border-style: solid;
+  border-image: linear-gradient(
+      to right,
+      rgb(190, 92, 232),
+      rgb(195, 179, 223),
+      rgb(244, 143, 177),
+      rgb(187, 85, 230)
+    )
+    0 0 100% 0;
+}
+
+section .content {
   padding: 1rem;
-  background-color: rgb(13, 13, 13);
-  background-image: url("/assets/bg.jpg");
+}
+
+/* We're going to use the :before pseudo element for the section's background image. */
+section::before {
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background-position: 50% 0;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: opacity 1s;
+}
+
+section.in-view::before {
+  opacity: max(calc(1 - var(--intersecting-ratio)), 0.1);
+}
+
+section.in-view .content {
+  opacity: var(--intersecting-ratio);
+}
+
+/* Intro Section */
+#intro {
+  background-image: url('/assets/bg.jpg');
   background-position: 30% bottom;
   background-attachment: fixed;
   background-size: min(175%, 1200px);
@@ -192,28 +237,14 @@ nav li:last-child {
 }
 
 /* Bass section */
-
 #bass {
-  background-color: rgba(4, 7, 12, 255);
-  background-image: url("/assets/bg2.jpg");
-  background-position: center;
-  background-attachment: fixed;
-  background-size: contain;
-  background-repeat: no-repeat;
+}
+
+#bass::before {
+  background-image: url('/assets/bg2.jpg');
   color: rgb(240, 240, 240);
-  opacity: 0;
-  transition: opacity 2s;
 }
 
-#bass.in-view {
-  opacity: 1;
-}
-
-#bass h2 {
-  font-family: inherit;
-  padding-top: 40px;
-  margin-bottom: 30px;
-}
 .container-bass {
   display: flex;
   flex-wrap: wrap;
@@ -306,7 +337,7 @@ p {
 
 #contact {
   background-color: rgba(4, 7, 12, 255);
-  background-image: url("/assets/bg_contact.JPG");
+  background-image: url('/assets/bg_contact.JPG');
   background-position: right 0px bottom 0px;
   background-attachment: fixed;
   background-size: cover;
