--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ nav li:last-child {
   color: rgb(240, 240, 240);
 }
 
-#bass .iframe-aspect-ratio {
+.iframe-aspect-ratio {
   position: relative;
   width: 100%;
   height: 0;
@@ -247,7 +247,7 @@ nav li:last-child {
   margin-block-end: 2rem;
 }
 
-#bass .iframe-aspect-ratio iframe {
+.iframe-aspect-ratio iframe {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -265,7 +265,7 @@ nav li:last-child {
 
 #bass .spotify iframe {
   width: 100%;
-  height: 300px;
+  height: 152px;
 }
 
 .container-bass {
@@ -302,11 +302,7 @@ p {
   padding: 4px;
   font-size: 1.2rem;
 }
-#sound h2 {
-  text-align: center;
-  padding-top: 30px;
-  margin-bottom: 0;
-}
+
 #sound h3 {
   font-size: 1.5rem;
   padding-bottom: 10px;
@@ -315,38 +311,22 @@ p {
   color: #f3d0fc;
 }
 
-.container-kssl {
-  margin: 30px;
+#sound .project-videos {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#sound .project-videos .project-video {
   border: 1px solid rgba(225, 225, 225, 0.4);
   padding: 15px;
   border-radius: 10px;
 }
+
 .kssl-text {
   padding-right: 15px;
 }
 
-.container-mid {
-  margin: 30px;
-  display: flex;
-}
-.container-mid-left {
-  display: flex;
-  /* flex-wrap: wrap; */
-  align-items: center;
-  /* border: 1px solid rgba(225, 225, 225, 0.4); */
-  padding: 15px;
-  border-radius: 10px;
-}
-.sound-replacement,
-.audio3d {
-  border: 1px solid rgba(225, 225, 225, 0.4);
-  padding: 15px;
-  border-radius: 10px;
-  margin-right: 30px;
-  margin-bottom: 5px;
-}
 .small-window {
   padding: 15px;
 }
