--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ section::before {
   content: '';
   display: block;
   position: absolute;
-  z-index: 0;
+  z-index: -1;
   inset: 0;
   background-position: 50% 0;
   background-size: cover;
@@ -316,13 +316,25 @@ p {
   flex-direction: column;
   gap: 1rem;
 }
-
-#sound .project-videos .project-video {
+.sound-box {
   border: 1px solid rgba(225, 225, 225, 0.4);
   padding: 15px;
   border-radius: 10px;
 }
-
+.project-links {
+  padding-block: 0;
+}
+.project-links ul {
+  list-style: none;
+  text-align: center;
+}
+.project-links li {
+  border-bottom: 1px solid rgba(225, 225, 225, 0.4);
+  padding-block: 0.5rem;
+}
+.project-links li:last-child {
+  border-bottom: none;
+}
 .kssl-text {
   padding-right: 15px;
 }
@@ -458,6 +470,22 @@ textarea {
   #bass .videos > :nth-child(1),
   #bass .videos > :nth-child(2) {
     flex-grow: 1;
+  }
+
+  #sound .project-videos {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  #sound .project-video:nth-child(1) {
+    flex-grow: 2;
+  }
+  #sound .project-video:nth-child(2),
+  #sound .project-video:nth-child(3) {
+    flex-grow: 1;
+    flex-basis: 0;
+  }
+  #sound .sound-box {
+    flex-grow: 2;
   }
 }
 
