--- a/styles.css
+++ b/styles.css
@@ -361,12 +361,6 @@ p {
 }
 
 #contact h2 {
-  font-weight: 100;
-  font-size: 3rem;
-  padding-top: 5rem;
-  padding-left: 12rem;
-  margin-bottom: 4rem;
-  /* padding-bottom: 4rem; */
   color: black;
 }
 #contact h3 {
@@ -378,9 +372,7 @@ p {
   color: black;
 }
 form {
-  max-width: 420px;
-  margin-left: 7rem;
-  /* margin-left: 7rem; */
+  max-width: 20ch;
 }
 .feedback-input {
   border-radius: 5px;
@@ -430,15 +422,17 @@ textarea {
 .submit:hover {
   background: rgba(255, 255, 255, 0.5);
 }
-.footer {
-  margin-left: 10rem;
-}
 .social-links {
-  padding-right: 37px;
+  display: flex;
+  gap: 1rem;
+}
+.social-links img {
   height: 50px;
+}
+.social-links a {
   transition: all 0.3s;
 }
-.social-links:hover {
+.social-links a:hover {
   opacity: 0.6;
 }
 
